--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,4 +6,9 @@
 
 .exercise-list {
     margin-top: 50px;
+    max-height: 500px;
+    overflow: auto;
+    border: 1px solid #ccc; /* 边框（可选） */
+    padding: 10px; /* 内边距（可选） */
+    box-sizing: border-box; /* 包含内边距和边框 */
 }
