--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,3 +12,8 @@
     padding: 10px; /* 内边距（可选） */
     box-sizing: border-box; /* 包含内边距和边框 */
 }
+
+.default-recommendation {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
